--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,10 @@ dependencies {
 //GLIDE
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+    //recyclerview
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+//cardview
+    implementation 'androidx.cardview:cardview:1.0.0'
+
 }
